# easyspdlog

./: CMakeLists.txt  License  README.md
cmake/: CPM.cmake
include/: easyspdlog.h
